Redundent code removed and fixed ui glitch in shift menu item

--- a/src/app/forms/components/date-picker/date-picker.component.scss
+++ b/src/app/forms/components/date-picker/date-picker.component.scss
@@ -2,9 +2,3 @@
   width: 296px !important;
   height: 354px !important;
 }
-
-.datetime-picker-position {
-  position: absolute;
-  top: 100px;
-  left: 100px;
-}
